# vawk

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  definitions.proto  go.mod  go.sum  sseHandler.go  ticker.go
docs/: wire-format.md
gui/: .eslintcache  package.json  tailwind.config.js
gui/src/: App.test.tsx  App.tsx  parser.tsx
gui/src/components/: App.tsx  LineOptionsForm.tsx  RowOptionsForm.tsx  requests.ts
gui/src/util/: parser.ts
server/: Cargo.toml  Rocket.toml  build.rs
server/docs/: architecture.md
server/src/: byte_trie.rs  command.rs  command_executor.rs  encoding.rs  main.rs  parser.rs  parsers.rs  server.rs  transformers.rs  websocket_connection.rs
server/src/protos/: definitions.rs
src/: byte_trie.rs  main.rs  parsers.rs  transformers.rs  websocket_connection.rs
src/protos/: definitions.rs
ui/: .gitignore  app.jsx  build.js  definitions_pb.js  index.html  package-lock.json  package.json  tailwind.config.js
