[package]
name = "vawk"
version = "1.7.0"
authors = ["Jim Berlage <james.berlage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protoc-rust = "2"

[dependencies]
actix = "0.10"
actix-cors = "0.5"
actix-files = "0.5"
actix-http = "2"
actix-rt = "2"
actix-web = "3"
actix-web-actors = "3"
base64 = "0.13"
bytes = "0.5"
clap = "2"
csv = "1.1"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
nom = "6.0"
protobuf = { version = "2", features = ["with-bytes", "with-serde"] }
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ulid = { version = "0.4", features = ["serde"] }