[package]
name = "server"
version = "0.1.0"
authors = ["Jim Berlage <james.berlage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]