[package]
name = "server"
version = "0.1.0"
authors = ["Jim Berlage <james.berlage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
nom = "6.0"
regex = "1.4"
rocket = { version = "0.4", features = ["sse"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]